homework_module12/istio+tls+L7/httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - image: zhdd99/httpserver:v1.0-metrics
        imagePullPolicy: Always
        name: httpserver
        resources: 
          limits:
            memory: 200Mi 
          requests:
            memory: 100Mi
        livenessProbe:
          httpGet:
            ### this probe will fail with 404 error code
            ### only httpcode between 200-400 is retreated as success
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            ### this probe will fail with 404 error code
            ### only httpcode between 200-400 is retreated as success
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 2
      

---

apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: httpserver
